--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,9 +5,9 @@
   <!-- Title -->
   <div class="row mt-5">
     <div class="col-xs-1">
-      <img class="img-responsive" height="100px" src="static/logo.png" alt="Logo">
+      <img class="img-responsive" height="100px" src="/static/logo.png" alt="Logo">
     </div>
-    <h1 class="col-3 mt-3">Welcome back{%if name%} {{name}}{%endif%}!</h1>
+    <h1 class="col-3 mt-3">Welcome back{%if user%} {{user.forename}}{%endif%}!</h1>
   </div>
 
   <!-- Welcome text -->
