--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,3 +1,16 @@
 .faded {
     opacity: 0.4;
 }
+
+.numberCircle {
+    border-radius: 50%;
+    behavior: url(PIE.htc); /* remove if you don't care about IE8 */
+    width: 30px;
+    height: 30px;
+    background: #fff;
+    border: 2px solid black;
+    color: black;
+    text-align: center;
+    font: 24px Arial, sans-serif;
+    display: inline-block;
+}
