--- a/app/templates/main/matches.html
+++ b/app/templates/main/matches.html
@@ -13,16 +13,7 @@
             <div class="col-12">
                 <div class="row p-4">
                     <!-- Matches list -->
-                    <ul class="col-11 list-unstyled">
-                        {% if movies %}{% for movie in matches %}
-                        <div>
-                            <li class="row m-2">
-                                <div class="col-md-12 border">
-                                    <p>{{movie.name}}</p>
-                                </div>
-                            </li>
-                        </div>
-                        {% endfor %}{% endif %}
+                    <ul id="matches" class="col-11 list-group">
                     </ul>
                 </div>
             </div>
