--- a/app/templates/main/app_navbar.html
+++ b/app/templates/main/app_navbar.html
@@ -1,8 +1,8 @@
 <ul class="navbar-nav mr-auto">
-  <li class="nav-item"><a class="nav-link {% block nav_movies %}{% endblock %}" href="{{ url_for('app.matcher') }}">Matcher</a></li>
-  <li class="nav-item"><a class="nav-link {% block nav_matcher %}{% endblock %}" href="{{ url_for('app.movies') }}">Movies</a></li>
-  <li class="nav-item"><a class="nav-link {% block nav_friends %}{% endblock %}" href="{{ url_for('app.friends') }}">Friends</a></li>
-  <li class="nav-item"><a class="nav-link {% block nav_groups %}{% endblock %}" href="{{ url_for('app.groups') }}">Groups</a></li>
+  <li class="nav-item"><a class="nav-link {% block nav_movies %}{% endblock %}" href="{{ url_for('movies.matcher') }}">Matcher</a></li>
+  <li class="nav-item"><a class="nav-link {% block nav_matcher %}{% endblock %}" href="{{ url_for('movies.movies') }}">Movies</a></li>
+  <li class="nav-item"><a class="nav-link {% block nav_friends %}{% endblock %}" href="{{ url_for('friends.friends') }}">Friends</a></li>
+  <li class="nav-item"><a class="nav-link {% block nav_groups %}{% endblock %}" href="{{ url_for('groups.groups') }}">Groups</a></li>
 </ul>
 
 <ul class="nav navbar-nav navbar-right">
