--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,
       shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet"
+    <!-- <link rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-      crossorigin="anonymous">
-    <script>window.jQuery || document.write('<script src="{{url_for('static', filename = 'js/jquery.js') }}">\x3C/script>')</script>
+      crossorigin="anonymous" media="screen"> -->
+    <link rel="stylesheet"
+      href="/static/js/bootstrap-4.6.1-dist/css/bootstrap.min.css"
+      media="screen">
     <link rel="stylesheet"
       href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/themes/base/jquery-ui.css"
       type="text/css" media="all" />
@@ -31,10 +33,11 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
       integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
       crossorigin="anonymous"></script>
-    <script
+    <!-- <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
       integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"></script> -->
+    <script src="/static/js/bootstrap-4.6.1-dist/js/bootstrap.min.js"></script>
     <script src="/static/js/animations.js"></script>
     <script src="/static/js/requests.js"></script>
 
