--- a/app/templates/main/movie_match.html
+++ b/app/templates/main/movie_match.html
@@ -13,29 +13,27 @@
 
     <!-- Movie Picking container -->
     <div class="row m-3">
-        <div class="col-10 m-3 p-1 border">
-            <div class="col-12">
-                <!-- Start movie list -->
-                <div id="movie-picker-btn" class="row p4">
-                    <a class="btn">Create your movie list</a>
-                </div>
-                <div id="movie-picker" class="row p-4 d-none">
-                    <!-- Movie Pick -->
-                    <div class="col-11">
-                        <div class="col-md-10 border">
-                            <div id="movie-name">Name</div>
-                            <div id="movie-date">Date</div>
-                        </div>
-                        <!-- Options -->
-                        <div>
-                            <div class="col-1"></div>
-                            <a id="yes" class="decision col-md-2 btn
-                                btn-primary">Yes</a>
-                            <a id="maybe" class="decision col-md-2 btn
-                                btn-warning">Maybe</a>
-                            <a id="no" class="decision col-md-2 btn btn-danger">No</a>
-                            <div class="col-md-1"></div>
-                        </div>
+        <div class="col-10 m-3 p-1">
+            <!-- Start movie list -->
+            <div id="movie-picker-btn" class="row p4">
+                <a class="btn btn-success">Create your movie list</a>
+            </div>
+            <div id="movie-picker" class="row p-4 d-none">
+                <!-- Movie Pick -->
+                <div class="col-11">
+                    <div class="col-md-10 border">
+                        <div id="movie-name">Name</div>
+                        <div id="movie-date">Date</div>
+                    </div>
+                    <!-- Options -->
+                    <div>
+                        <div class="col-1"></div>
+                        <a id="yes" class="decision col-md-2 btn
+                            btn-primary">Yes</a>
+                        <a id="maybe" class="decision col-md-2 btn
+                            btn-warning">Maybe</a>
+                        <a id="no" class="decision col-md-2 btn btn-danger">No</a>
+                        <div class="col-md-1"></div>
                     </div>
                 </div>
             </div>
