--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -32,7 +32,7 @@
         <!-- Cancel / Submit -->
         <p>
             <a href="{{ url_for('auth.register') }}">
-                <input type="button" class="btn btn-secondary" value="Sign Up">
+                <input type="button" class="btn btn-success mr-2" value="Sign Up">
             </a>
             <input type="submit" class="btn btn-primary" value="Login">
         </p>
