--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -65,9 +65,9 @@
         <!-- Cancel / Submit -->
         <p>
             <a href="{{ url_for('auth.login') }}">
-                <input type="button" class="btn btn-secondary" value="Log In">
+                <input type="button" class="btn btn-primary mr-2" value="Log In">
             </a>
-            <input type="submit" class="btn btn-primary" value="Register">
+            <input type="submit" class="btn btn-success" value="Register">
         </p>
     </form>
 </div>
