--- a/app/templates/main/matches.html
+++ b/app/templates/main/matches.html
@@ -1,17 +1,17 @@
 <!-- Heading -->
 <div class="row m-5">
     <div class="col-3"></div>
-    <div class="col-xs-3">
+    <div id="match_top" class="col-xs-3">
         <h2>Matches</h2>
     </div>
 </div>
 
 <!-- Matches container -->
 <div class="row m-3">
-    <div class="col-12 m-3 p-1 border">
+    <div class="col-12 m-3 p-1">
         <div class="row">
             <div class="col-12">
-                <div class="row p-4">
+                <div class="row p-2">
                     <!-- Matches list -->
                     <ul id="matches" class="col-11 list-group">
                     </ul>
