--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,36 +2,52 @@
 {% block content %}
 <div class="container-fluid">
 
-  <!-- Title -->
-  <div class="row mt-5">
-    <div class="col-xs-1">
-      <img class="img-responsive" height="100px" src="/static/logo.png" alt="Logo">
+  <!-- Logo -->
+  <div class="row mt">
+    <div class="col-3 mx-auto">
+      <img class="img-fluid" height="100px"
+        src="/static/logo.png"
+        alt="Logo">
     </div>
-    <h1 class="col-3 mt-3">Welcome back{%if user%} {{user.forename}}{%endif%}!</h1>
+  </div>
+
+  <!-- Title -->
+  <div class="row">
+    <div class="col-1"></div>
+    <h1 class="col-10 mt-3 text-center">Welcome back{%if user%}
+      {{user.forename}}{%endif%}!</h1>
   </div>
 
   <!-- Welcome text -->
-  <div class="row m-3">
-    <div class="col-6">
-      <h2>This is your intelligent movie matching service</h2>
-      <p>Get together with your pals and chill</p>
-      <p>Forget the endless searching!</p>
+  <div class="row mx-3 mt-5 mb-2 text-center">
+    <div class=col-1></div>
+    <div class="col-10">
+      <div class="row"><h2 class="col-12">This is your intelligent movie
+          matching service</h2></div>
+      <div class="row mt-4">
+        <div class="col-12 font-italic">
+          <h4>Get together with your pals and chill</h4>
+          <h4>Forget the endless searching!</h4>
+        </div>
+      </div>
     </div>
   </div>
 
   <!-- Sign up / Login -->
   {% if not g.user %}
-  <p>
-    <a href="{{ url_for('auth.login') }}">
-      <input type="button" class="btn btn-secondary" value="Log In">
+  <div class="row mb-3">
+    <div class="col-1 ml-auto">
+      <a href="{{ url_for('auth.login') }}">
+        <input type="button" class="btn btn-primary" value="Log In">
       </a>
-    <a href="{{ url_for('auth.register') }}">
-    <input type="button" class="btn btn-primary" value="Sign Up">
-    </a>
-  </p>
+    </div>
+    <div class="col-1 mr-auto">
+      <a href="{{ url_for('auth.register') }}">
+        <input type="button" class="btn btn-success" value="Sign Up">
+      </a>
+    </div>
+  </div>
   {% endif %}
-
-  <hr>
 
 </div>
 {% endblock %}
