--- a/app/templates/main/friends.html
+++ b/app/templates/main/friends.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container-fluid">
     <div class="row">
-        <div class="col-6">
+        <div class="col-md-6">
             <!-- Title -->
             <div class="row m-5">
                 <div class="col-xs-3">
@@ -14,22 +14,21 @@
 
             <!-- Friends container -->
             <div class="row m-3">
-                <div class="col-10 m-3 p-1 border">
+                <div class="col-10 m-3 p-1">
                     <div class="col-12">
                         <div class="row p-4">
                             <!-- Friend list -->
                             <ul class="col-11 list-group">
                                 {% for friend in friend_list %}
-                                <div id="friend{{friend.userId}}"
+                                <li id="friend{{friend.userId}}"
                                     class="friend list-group-item
-                                    list-group-item-action">
-                                    <li class="row m-2">
-                                        <div class="col-md-10">
-                                            <h3>{{friend.forename}}
-                                                {{friend.surname}}</h3>
-                                        </div>
-                                    </li>
-                                </div>
+                                    list-group-item-action row m-2">
+                                    <div class="col-md-10">
+                                        <h3>{{friend.forename}}
+                                            {{friend.surname}}</h3>
+                                        <p>{{friend.username}}</p>
+                                    </div>
+                                </li>
                                 {% endfor %}
                             </ul>
                         </div>
@@ -42,7 +41,6 @@
                 <div class="col-xs-3">
                     <h1>Requests</h1>
                 </div>
-                <div class="col-3"></div>
             </div>
 
             <!-- Requests container -->
@@ -82,7 +80,7 @@
                             <!-- Request list -->
                             {% for request in requests %}
                             <li id="request{{request['friend'].userId}}"
-                                class='col-md-12 border list-group-item'>
+                                class='col-md-12 list-group-item'>
                                 <div class="btn">{{request['friend'].forename}}
                                     {{request['friend'].surname}}</div>
                                 <div class="accept btn btn-primary
@@ -98,7 +96,7 @@
         </div>
 
         <!-- Matches -->
-        <div class="col-6">
+        <div class="col-md-6">
             {% include "main/matches.html" %}
         </div>
     </div>
