--- a/app/templates/main/groups.html
+++ b/app/templates/main/groups.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container-fluid">
     <div class="row">
-        <div class="col-6">
+        <div class="col-md-6">
             <!-- Title -->
             <div class="row m-5">
                 <div class="col-xs-3">
@@ -76,15 +76,15 @@
                                             </div>
                                             <div class="row mt-2 hover d-none">
                                                 <a id="add{{loop.index}}"
-                                                    class="col-2 btn
+                                                    class="col-md-2 btn
                                                     btn-info m-2 add">
                                                     Add
                                                 </a>
-                                                <a class="col-2 btn
+                                                <a class="col-md-2 btn
                                                     btn-warning m-2 edit">
                                                     Edit
                                                 </a>
-                                                <a class="col-2 btn
+                                                <a class="col-md-2 btn
                                                     btn-danger m-2 leave">
                                                     Leave
                                                 </a>
@@ -101,7 +101,7 @@
         </div>
 
         <!-- Matches -->
-        <div class="col-6">
+        <div class="col-md-6">
             {% include "main/matches.html" %}
         </div>
     </div>
