--- a/app/templates/main/movie_match.html
+++ b/app/templates/main/movie_match.html
@@ -5,35 +5,42 @@
 <div class="container-fluid">
     <!-- Title -->
     <div class="row m-5">
-        <div class="col-xs-3">
+        <div class="col-12 text-center">
             <h1>{{ title }}</h1>
         </div>
-        <div class="col-3"></div>
     </div>
 
     <!-- Movie Picking container -->
     <div class="row m-3">
-        <div class="col-10 m-3 p-1">
+        <div class="col-12 m-3 p-1">
             <!-- Start movie list -->
-            <div id="movie-picker-btn" class="row p4">
-                <a class="btn btn-success">Create your movie list</a>
+            <div id="movie-picker-btn" class="row p-4">
+                <div class="col-md-2 col-xs-4 mx-auto">
+                    <a class="btn btn-success">Create
+                        your movie
+                        list
+                    </a>
+                </div>
             </div>
             <div id="movie-picker" class="row p-4 d-none">
                 <!-- Movie Pick -->
-                <div class="col-11">
-                    <div class="col-md-10 border">
-                        <div id="movie-name">Name</div>
-                        <div id="movie-date">Date</div>
+                <div class="col-12">
+                    <div class="row mb-5">
+                        <div class="text-center col-12">
+                            <h1 id="movie-name">Name</h1>
+                            <h3 id="movie-date">Date</h3>
+                        </div>
                     </div>
                     <!-- Options -->
-                    <div>
-                        <div class="col-1"></div>
-                        <a id="yes" class="decision col-md-2 btn
+                    <div class="row">
+                        <div class="col-3"></div>
+                        <a id="yes" class="decision col-md-2 btn mx-1
                             btn-primary">Yes</a>
-                        <a id="maybe" class="decision col-md-2 btn
+                        <a id="maybe" class="decision col-md-2 btn mx-1
                             btn-warning">Maybe</a>
-                        <a id="no" class="decision col-md-2 btn btn-danger">No</a>
-                        <div class="col-md-1"></div>
+                        <a id="no" class="decision col-md-2 mx-1 btn
+                            btn-danger">No</a>
+                        <div class="col-md-3"></div>
                     </div>
                 </div>
             </div>
