--- a/app/templates/main/movies.html
+++ b/app/templates/main/movies.html
@@ -3,44 +3,66 @@
 {% block content %}
 <div class="container-fluid">
     <div class="row">
-        <div class="col-6">
+        <div class="col-12">
             <!-- Title -->
             <div class="row m-5">
-                <div class="col-xs-3">
+                <div class="col-12 text-center">
                     <h1>{{ title }}</h1>
                 </div>
-                <div class="col-3"></div>
             </div>
 
             <!-- Movies container -->
-            <div class="row m-3">
-                <div class="col-10 m-3 p-1 border">
+            <div class="row">
+                <div class="col-10 m-3 p-1">
                     <div class="col-12">
                         <div class="row p-4">
                             <!-- Movie list yes -->
-                            <ul class="col-11 list-unstyled">
-                                <div>Yes</div>
-                                {% for movie in movies_yes %}
-                                <li class="row m-2">
-                                    <div class="col-md-10 border">
-                                        <p>{{movie.name}}
-                                            ({{movie.releasedate.year}})</p>
+                            <div class="col-md-6 mt-3">
+                                <div class="row mb-2">
+                                    <div class="col-5"></div>
+                                    <h3 class="col-2">Yes</h3>
+                                </div>
+                                <div class="row">
+                                    <div class="col-12 mx-auto">
+                                        <ul class="list-group list-unstyled">
+                                            {% for movie in movies_yes %}
+                                            <div class="list-group-item
+                                                list-group-item-action
+                                                list-group-item-success">
+                                                <li class="row-m2 text-center">
+                                                    <h4>{{movie.name}}</h4>
+                                                    <p>({{movie.releasedate.year}})</p>
+                                                </li>
+                                            </div>
+                                            {% endfor %}
+                                        </ul>
                                     </div>
-                                </li>
-                                {% endfor %}
-                            </ul>
+                                </div>
+                            </div>
                             <!-- Movie list maybe -->
-                            <ul class="col-11 list-unstyled">
-                                <div>Maybe</div>
-                                {% for movie in movies_maybe %}
-                                <li class="row m-2">
-                                    <div class="col-md-10 border">
-                                        <p>{{movie.name}}
-                                            ({{movie.releasedate.year}})</p>
+                            <div class="col-md-6 mt-3">
+                                <div class="row mb-2">
+                                    <div class="col-5"></div>
+                                    <h3 class="col-2">Maybe</h3>
+                                </div>
+                                <div class="row">
+                                    <div class="col-12 mx-auto">
+                                        <ul class="list-group
+                                            list-unstyled">
+                                            {% for movie in movies_maybe %}
+                                            <div class="list-group-item
+                                                list-group-item-action
+                                                list-group-item-warning">
+                                                <li class="row-m2 text-center">
+                                                    <h4>{{movie.name}}</h4>
+                                                    <p>({{movie.releasedate.year}})</p>
+                                                </li>
+                                            </div>
+                                            {% endfor %}
+                                        </ul>
                                     </div>
-                                </li>
-                                {% endfor %}
-                            </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
