bug fix login / signup button display

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,12 +36,12 @@
   <!-- Sign up / Login -->
   {% if not g.user %}
   <div class="row mb-3">
-    <div class="col-1 ml-auto">
+    <div class="col-1 ml-auto mr-3">
       <a href="{{ url_for('auth.login') }}">
         <input type="button" class="btn btn-primary" value="Log In">
       </a>
     </div>
-    <div class="col-1 mr-auto">
+    <div class="col-1 mr-auto ml-3">
       <a href="{{ url_for('auth.register') }}">
         <input type="button" class="btn btn-success" value="Sign Up">
       </a>
