--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,13 +35,14 @@
 
   <!-- Sign up / Login -->
   {% if not g.user %}
-  <div class="row mb-3">
-    <div class="col-1 ml-auto mr-3">
+  <div class="row mb-3 text-center">
+    <div class="col-lg-5 col-sm-4 col-3"></div>
+    <div class="col-lg-1 col-sm-2 col-3">
       <a href="{{ url_for('auth.login') }}">
         <input type="button" class="btn btn-primary" value="Log In">
       </a>
     </div>
-    <div class="col-1 mr-auto ml-3">
+    <div class="col-lg-1 col-sm-2 col-3">
       <a href="{{ url_for('auth.register') }}">
         <input type="button" class="btn btn-success" value="Sign Up">
       </a>
