--- a/app/templates/main/movie_match.html
+++ b/app/templates/main/movie_match.html
@@ -4,18 +4,18 @@
 
 <div class="container-fluid">
     <!-- Title -->
-    <div class="row m-5">
-        <div class="col-12 text-center">
+    <div class="row my-5">
+        <div class="col text-center">
             <h1>{{ title }}</h1>
         </div>
     </div>
 
     <!-- Movie Picking container -->
     <div class="row m-3">
-        <div class="col-12 m-3 p-1">
+        <div class="col m-3 p-1">
             <!-- Start movie list -->
             <div id="movie-picker-btn" class="row p-4">
-                <div class="col-md-2 col-xs-4 mx-auto">
+                <div class="col text-center">
                     <a class="btn btn-success">Create
                         your movie
                         list
@@ -24,7 +24,7 @@
             </div>
             <div id="movie-picker" class="row p-4 d-none">
                 <!-- Movie Pick -->
-                <div class="col-12">
+                <div class="col">
                     <div class="row mb-5">
                         <div class="text-center col-12">
                             <h1 id="movie-name">Name</h1>
